# governant

./: .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  Dockerfile  README copy.md  README.md  REGO_PLAYGROUND_GUIDE.md  arch.drawio  docker-compose.yml  github_environmnet_protect_check.sh  github_pull_request_check.sh  input_default_fail.json  input_default_pass.json  input_nondefault.json  opa_check.sh  pyproject.toml  python_check.sh  requirements.txt  run_act.sh  run_local.sh  test-advanced.sh  test-policy.sh
.compile/: github-release.wasm  github_env_protect.wasm
.gate/: README.md  github-release.rego  github_env_protect_test.rego  github_pull_request.rego  github_pull_request_policy.json  github_pull_request_test.rego  policy.json  pull_request.rego  schema.json  unified_policy.json  unified_schema.json
.github/: CODEOWNERS  copilot-instructions.md  event.json
.github/workflows/: compile-policy.yml  docker-smoke.yml  opa-evaluation.yml  python-wasm-validation.yml  scripts.yml  test-policies.yml  validate-environment.yml  validate-policy.yml  validate-pr-policy.yml  validate-pr-to-main.yml  validations.yml  wasm-test.yml
.governant/code/: github_env_protect.rego  github_env_protect_test.rego  github_pull_request.rego  github_pull_request_test.rego
.governant/policies/: github_pull_request_policy.json
compile/github-release/: .manifest  github-release.manifest.json  github-release.wasm
compile/github-release/Users/erasmo/Code/governant/.gate/: github-release.rego
docker/: Dockerfile  README.md  docker-compose.yml
docs/: Makefile  api.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
events/: pr_invalid.json  pr_valid.json
examples/: run_policy_wasm.py
infra/: README.md
infra/examples/function_app/: README.md  main.tf
infra/modules/azure_function/: README.md  main.tf  outputs.tf  variables.tf
policies/: github-release.rego  policy.json
scripts/: benchmark_policy.py  compile_github_env_protect_policy.sh  compile_policy.sh  docker-build.sh  docker.sh  e2e.sh  eval_pr_policy.sh  execute_policy.py  github_environmnet_protect_check.sh  github_pull_request_check.sh  opa_check.sh  python_check.sh  run-deploy-policy-check.sh  test_all_scenarios.py  test_local.sh  test_opa.sh  validate_github_env_protect_rego.sh  validate_policy.py  validate_rego.sh  validate_schema.py  validate_schema.sh
scripts/legacy-snapshots/: docker-root-commands.sh  github_environmnet_protect_check.sh  github_pull_request_check.sh
src/: __init__.py  cli.py  pytest.ini
src/core/: __init__.py  governance.py
src/ghprotect/: __init__.py  cli.py  handler.py
src/governant/: __init__.py  cli.py  core.py
src/governant/validation/: __init__.py  environment.py
src/governant/wasm/: __init__.py
src/opawasm/: __init__.py  cli.py  main.py
src/tests/: conftest.py  test_ghprotect.py  test_opawasm.py
src/tests/core/: test_governance.py
src/tests/utils/: test_validators.py
src/utils/: __init__.py  validators.py
test-inputs/: emergency-production.json  pr_no_valid.json  pr_valid.json  production-invalid.json  production-valid.json  staging-valid.json
