[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "governant"
version = "0.1.0"
description = "Governance automation toolkit"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
governant = "cli:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=./ --cov-report=term-missing"

[project.urls]
Homepage = "https://github.com/yourusername/governant"
Documentation = "https://github.com/yourusername/governant#readme"
"Bug Tracker" = "https://github.com/yourusername/governant/issues"
"Source Code" = "https://github.com/yourusername/governant"
